Nodes now have corresponding tiles attached