@@ -1,9 +1,6 @@
 package gameObjects;
 
-import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.Collection;
-import java.util.HashMap;
+import java.util.*;
 
 public class GameBoard {
 
@@ -47,16 +44,6 @@ public class GameBoard {
                 case 2 -> 5;
                 default -> 0;
             };
-
-//            ArrayList<ArrayList<Integer>> correspondingNodeCoordinates = switch (y) {
-//                case 0:
-//                    new ArrayList<>(new ArrayList<>(Arrays.asList(0, 0)), );
-//                case 1 -> new ArrayList<>(Arrays.asList(2, 3, 4, 5));
-//                case 2 -> new ArrayList<>(Arrays.asList(4, 5, 6, 7));
-//                case 3 -> new ArrayList<>(Arrays.asList(6, 7, 8, 9));
-//                case 4 -> new ArrayList<>(Arrays.asList(8, 9, 10, 11));
-//                default -> throw new IllegalStateException("Unexpected value: " + y);
-//            };
 
             for (int x=0; x<x_length; x++) {
                 ResourceType resourceChosen;
@@ -109,6 +96,7 @@ public class GameBoard {
             }
         }
 
+        ArrayList<Integer> correspondingYTiles;
         for (int y=0; y<=11; y++) {
             int x_length = switch (y) {
                 case 0, 11 -> 3;
@@ -118,38 +106,54 @@ public class GameBoard {
                 default -> 0;
             };
 
-        for (int x=0; x<x_length; x++) {
-            ArrayList<Tile> connectedTiles;
-            switch (y) {
-                case 0, 11:
-                    connectedTiles = new ArrayList<>();
-                    if (tilesDict.containsKey(Arrays.asList(x, y))) {
-                        connectedTiles.add(tilesDict.get(Arrays.asList(x, y)));
-                        nodesDict.put(new ArrayList<>(Arrays.asList(x, y)), new Node(new ArrayList<Integer>(Arrays.asList(x, y)), new ArrayList<Node>(), connectedTiles));
-                    }
-                    break;
-                default:
-                    connectedTiles = new ArrayList<>();
-                case 1:
-                    connectedTiles = new ArrayList<>();
-                    if (tilesDict.containsKey(Arrays.asList(x, y-1)) || tilesDict.containsKey(Arrays.asList(x-1, y-1))) {
-                        connectedTiles.add(tilesDict.get(Arrays.asList(x, y)));
-                    }
-                    nodesDict.put(new ArrayList<>(Arrays.asList(x, y)), new Node(new ArrayList<Integer>(Arrays.asList(x, y)), new ArrayList<Node>(), connectedTiles));
-                    break;
-                case 2:
-                    connectedTiles = new ArrayList<>();
-                    for (int i=0; i<2; i++) {
+//            correspondingYTiles = switch (y) {
+//                case 0, 1 -> new ArrayList<>(List.of(0));
+//                case 2, 3 -> new ArrayList<>(Arrays.asList(0, 1));
+//                case 4, 5 -> new ArrayList<>(Arrays.asList(1, 2));
+//                case 6, 7 -> new ArrayList<>(Arrays.asList(2, 3));
+//                case 8, 9 -> new ArrayList<>(Arrays.asList(3, 4));
+//                case 10, 11 -> new ArrayList<>(List.of(4));
+//                default -> new ArrayList<>();
+//            };
 
-                    }
-                    if (tilesDict.containsKey(Arrays.asList(x, y-1)) || tilesDict.containsKey(Arrays.asList(x-1, y-1))) {
-                        connectedTiles.add(tilesDict.get(Arrays.asList(x, y)));
-                    }
-                    nodesDict.put(new ArrayList<>(Arrays.asList(x, y)), new Node(new ArrayList<Integer>(Arrays.asList(x, y)), new ArrayList<Node>(), connectedTiles));
-                    break;
+        for (int x=0; x<x_length; x++) {
+            ArrayList<Tile> connectedTiles = new ArrayList<>();
+            for (ArrayList<Integer> tile : tilesDict.keySet()) {
+                if (tilesDict.get(tile).getCorrespondingNodeCoordinates().contains(Arrays.asList(x, y))) {
+                    connectedTiles.add(tilesDict.get(Arrays.asList(tile.getFirst(), tile.getLast())));
+                }
+                nodesDict.put(new ArrayList<>(Arrays.asList(x, y)), new Node(new ArrayList<Integer>(Arrays.asList(x, y)), new ArrayList<Node>(), connectedTiles));
             }
-            Node node = new Node(new ArrayList<Integer>(Arrays.asList(x, y)), new ArrayList<Node>(), new ArrayList<Tile>());
-        }
+//            switch (y) {
+//                case 0, 11:
+//                    connectedTiles = new ArrayList<>();
+//                    if (tilesDict.containsKey(Arrays.asList(x, correspondingYTiles.getFirst()))) {
+//                        connectedTiles.add(tilesDict.get(Arrays.asList(x, correspondingYTiles.getFirst())));
+//                        nodesDict.put(new ArrayList<>(Arrays.asList(x, y)), new Node(new ArrayList<Integer>(Arrays.asList(x, y)), new ArrayList<Node>(), connectedTiles));
+//                    }
+//                    break;
+//                case 1, 10:
+//                    connectedTiles = new ArrayList<>();
+//                    if (tilesDict.containsKey(Arrays.asList(x, correspondingYTiles.getFirst())))
+//                        connectedTiles.add(tilesDict.get(Arrays.asList(x, correspondingYTiles.getFirst())));
+//                    if (tilesDict.containsKey(Arrays.asList(x - 1, correspondingYTiles.getFirst())))
+//                        connectedTiles.add(tilesDict.get(Arrays.asList(x - 1, correspondingYTiles.getFirst())));
+//
+//                    nodesDict.put(new ArrayList<>(Arrays.asList(x, y)), new Node(new ArrayList<Integer>(Arrays.asList(x, y)), new ArrayList<Node>(), connectedTiles));
+//                    break;
+//                default:
+//                    connectedTiles = new ArrayList<>();
+//                    for (int j = 0; j < 2; j++) {
+//                        if (tilesDict.containsKey(Arrays.asList(x, correspondingYTiles.get(j))))
+//                            connectedTiles.add(tilesDict.get(Arrays.asList(x, correspondingYTiles.get(j))));
+//                        if (tilesDict.containsKey(Arrays.asList(x - 1, correspondingYTiles.get(j))))
+//                            connectedTiles.add(tilesDict.get(Arrays.asList(x - 1, correspondingYTiles.get(j))));
+//                    }
+//                    nodesDict.put(new ArrayList<>(Arrays.asList(x, y)), new Node(new ArrayList<Integer>(Arrays.asList(x, y)), new ArrayList<Node>(), connectedTiles));
+//                    break;
+//            }
+            // Node node = new Node(new ArrayList<Integer>(Arrays.asList(x, y)), new ArrayList<Node>(), new ArrayList<Tile>());
+            }
         }
 
     }
